<resources>
    <string name="app_name">Exercise</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Add_New">Tambah Data</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="title_activity_display_contact">Data Mahasiswa</string>
    <string name="name">Nama</string>
    <string name="us">Masukan Nama</string>
    <string name="phone">Nomor Telepon</string>
    <string name="mt">Masukan Nomor Telepon</string>
    <string name="email">Email</string>
    <string name="ue">Masukan Email</string>
    <string name="Alamat">Alamat</string>
    <string name="ma">Masukan Alamat</string>
    <string name="save">Simpan</string>
    <string name="deleteContact">Yakin...ingin menghapus ini.</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="db">Daftar Kontak</string>
    <string name="pp">Profil</string>
    <string name="ud">Update Data</string>
</resources>
