<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".tambahData">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBaseline_toBaselineOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:textSize="30dp"
                android:layout_gravity="center"
                android:text="@string/Add_New"
                android:textColor="@color/judul" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:layout_marginTop="100dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textview2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:text="@string/name"
                        android:textColor="@color/txt"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/masukan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/us"
                        android:inputType="textPersonName"
                        android:textColor="@color/colorAccent" />

                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textview3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phone"
                        android:ems="7"
                        android:textColor="@color/txt"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/masukantelpon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/mt"
                        android:inputType="phone"
                        android:textColor="@color/colorAccent" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textview4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textColor="@color/txt"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/masukanemail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/ue"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/colorAccent" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textview5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Alamat"
                        android:textColor="@color/txt"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/masukanalamat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/ma"
                        android:inputType="text"
                        android:textColor="@color/colorAccent" />

                </TableRow>
            </TableLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:gravity="center|bottom"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnok"
                    android:layout_width="150dp"
                    android:layout_height="49dp"
                    android:gravity="center"
                    android:layout_marginBottom="10dp"
                    android:onClick="run"
                    android:text="@string/save"
                    tools:ignore="OnClick" />

            </LinearLayout>
    </LinearLayout>
    </ScrollView>